--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -9,3 +9,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+
+jwt:
+  secret: fjaisdpfjsadoifhsiodhvpashi390u190141333h487vvasdlvasdv
+  expiration: 1000 * 60 * 60 * 24 * 30
