--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -12,4 +12,4 @@ spring:
 
 jwt:
   secret: fjaisdpfjsadoifhsiodhvpashi390u190141333h487vvasdlvasdv
-  expiration: 1000 * 60 * 60 * 24 * 30
+  expiration: 2592000000
